--- a/sharelist-cilent/src/index.css
+++ b/sharelist-cilent/src/index.css
@@ -2,8 +2,11 @@ html {
   height: 100%; }
   html body {
     height: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     font-family: sans-serif; }
     html body #root {
       height: 100%; }
+    html body .navbar {
+      height: 60px; }
