--- a/sharelist-cilent/src/index.scss
+++ b/sharelist-cilent/src/index.scss
@@ -3,12 +3,17 @@ html{
     
   body {
       height: 100%;
+      overflow: hidden;
       margin: 0;
       padding: 0;
       font-family: sans-serif;
 
       #root{
        height: 100%;
+      }
+
+      .navbar{
+        height: 60px;
       }
   }
 }
